--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,18 +31,11 @@ jobs:
         run: npm run build-dmg
         env:
           CI: true
+          GH_TOKEN: ""
 
       - name: Upload DMG artifact
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v3
         with:
           name: SMB-File-Transfer.dmg
           path: dist/*.dmg
           retention-days: 30
-
-      - name: Create Release
-        if: startsWith(github.ref, 'refs/tags/')
-        uses: softprops/action-gh-release@v1
-        with:
-          files: dist/*.dmg
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
