Disable GitHub release publishing in build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,6 +32,7 @@ jobs:
         env:
           CI: true
           GH_TOKEN: ""
+          ELECTRON_BUILDER_ALLOW_UNRESOLVED_DEPENDENCIES: true
 
       - name: Upload DMG artifact
         uses: actions/upload-artifact@v4
