Disable GitHub release publishing in build

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "build": {
     "appId": "com.filetransfer.app",
     "productName": "SMB File Transfer",
+    "publish": null,
     "mac": {
       "target": [
         "dmg",
