--- a/package.json
+++ b/package.json
@@ -27,7 +27,11 @@
       "hardenedRuntime": true,
       "gatekeeperAssess": false,
       "entitlements": "entitlements.mac.plist",
-      "entitlementsInherit": "entitlements.mac.plist"
+      "entitlementsInherit": "entitlements.mac.plist",
+      "arch": [
+        "x64",
+        "arm64"
+      ]
     },
     "dmg": {
       "contents": [
